--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,7 @@
 [TELEGRAM]
 ACCESS_TOKEN = 6105949547:AAESk0u8NqVMMce2tMo1EKjIhnOfe-VUpqo
+
+[REDIS]
+HOST = redis-11065.c299.asia-northeast1-1.gce.cloud.redislabs.com
+PASSWORD = 0UOwmhBYJtvyUOJMGjanQyYNlAQIVoLr
+REDISPORT = 11065
